--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 MONGO_URI=mongodb+srv://jmuhumuza:Z28da4yBaofCeGHz@cluster0.8p1tg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=JWT_SECRET
 PORT=3000
+CLOUDINARY_SECRET_KEY ='tRoRlLd3ayXEi9EU1g0zWpkELjc'
+CLOUDINARY_API_KEY ='345352633482687'
+CLOUDINARY_CLOUD_NAME ='dkmz21mob'
